--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VUE_APP_PROJECT_API_URL="https://api.themoviedb.org"
-VUE_APP_API_KEY="25a56af0d86018cb53b067a3b318e5b5"
+VUE_APP_PROJECT_API_URL=https://api.themoviedb.org
+VUE_APP_API_KEY=25a56af0d86018cb53b067a3b318e5b5
+VUE_APP_I18N_LOCALE=en
+VUE_APP_I18N_FALLBACK_LOCALE=en
