--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "2",
     "core-js": "^3.6.5",
+    "swiper": "5.x",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.22.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
